--- a/reportMaster2/3-Biblio.tex
+++ b/reportMaster2/3-Biblio.tex
@@ -19,22 +19,30 @@ Le DSEL implémenté s'appuie sur très peu de classes afin de simplifier son ut
 \subsection{Création des stencils}
 
 Les coefficients peuvent être créés en version constante ou variable, avec les indices de décalage spécifiés dans le \emph{template} de la classe, ils seront donc statiques. La logique de construction n'est pas exactement la même pour les deux classes puisque la version constante nécessite de préciser le type du coefficient (entier, flottant, etc\ldots). Enfin notons que seule la version en deux dimensions a été implémentée et est ici présentée.
-\begin{minted}{cpp}
+\begin{listing}[H]
+\caption{Création de coefficients, avec leur indice de décalage.}
+\begin{minted}[frame=single]{cpp}
 /* la valeur du coefficient est affectée à la construction */
 coef_fxd2D<-1, 1, double> c2(0.2);
 /* les valeurs du coefficient nécessiteront une fonction tierce */
 coef_var2D<0, 0> c1;
 \end{minted}
+\end{listing}
 
-Une fois les coefficients initialisés, il est possible de les rassembler pour former le motif du stencil. Il est d'ailleurs possible de combiner plusieurs stencils ensembles de la même manière. Toutefois il n'est possible d'agréger que des coefficients du constants et du même type entre eux, ou bien que des coefficients variables entre eux, il n'est pas possible de mélanger les deux possibilités.
-\begin{minted}{cpp}
+Une fois les coefficients initialisés, il est possible de les rassembler pour former le motif du stencil. Il est d'ailleurs possible de combiner plusieurs stencils ensembles de la même manière. Toutefois il n'est possible d'agréger que des coefficients constants et du même type entre eux, ou bien que des coefficients variables entre eux, il n'est pas possible de mélanger les deux possibilités.
+\begin{listing}[H]
+\caption{Agrégation des coefficients pour former un stencil à cinq points.}
+\begin{minted}[frame=single]{cpp}
 /* création d'un stencil à 5 points */
 auto st = c1+c2+c3+c4+c5; 
 \end{minted}
+\end{listing}
 Il est important de remarquer deux choses sur cet extrait de code : l'usage du mot-clé \textsf{auto} et l'usage de l'opérateur \textsf{+}. Le mot-clé \textsf{auto} permet de cacher à l'utilisateur le vrai type du stencil qui, étant un template, contient de nombreuses informations et serait donc fastidieux à écrire. Concrètement écrire directement le type du stencil reviendrait à écrire les propriétés du stencil sous une forme très peu lisible (tous les indices étant les uns à la suite de autres sur la même ligne), ce qu'il vaut donc mieux éviter. Quant au \textsf{+} il est utilisé pour faire la \og concaténation \fg~des coefficients mais n'a rien à voir avec l'opération mathématique qui est effectuée derrière. Lier les deux pourraient être intéressant, mais complexe à mettre en place car dans la plupart des cas, les opérations utilisées sont des additions.
 
 Les coefficients variables nécessitent l'initialisation d'un tableau tiers, dont le type est basé sur \textsf{SYCL}. Il s'agit d'un \emph{buffer} à une seule dimensions comprenant n'importe quel nombre d'éléments. Ce buffer est alors associé à une fonction d'accès, qui doit veiller à ne pas dépasser les limites du tableau (non vérifié par la compilation). L'exemple de code suivant présente l'équivalent d'un coefficient constant sous forme de coefficient variable.
-\begin{minted}{cpp}
+\begin{listing}[H]
+\caption{Exemples de fonction d'accès aux coefficients.}
+\begin{minted}[frame=single]{cpp}
 /* valeur du coefficient */
 float tab_var = 1.0;
 /* création du buffer */
@@ -45,12 +53,15 @@ float  fac_coef(int a,int b, int c, int d,
   return acc[0];
 }
 \end{minted}
+\end{listing}
 Bien sûr dans le cas d'un coefficient variable, la fonction d'accès peut être beaucoup plus complexe et peut notamment faire intervenir les quatre variables \verb!a, b, c, d! qui sont les indices globaux puis de décalage de l'élément en cours de calcul, tandis que \verb!acc! est le tableau des coefficients. L'écriture de ces fonctions d'accès n'est pas vraiment aisé, mais elles sont nécessaires dans certains types de calculs comme la chromodynamique quantique.
 
 \subsection{Application des stencils}
 
 Avant de déclencher le calcul, il reste à préciser les informations de l'opération : tableaux d'entrée et sortie notamment, ainsi que leur fonction d'accès. Ces fonctions d'accès sont plus simples puisqu'elles ne font intervenir que les indices globaux, en revanche il est nécessaire d'en définir une pour la sortie et une pour l'entrée, même si les deux accèdent aux éléments de la même façon. Ces deux versions différents sont nécessaires car la fonction du tableau de sortie, dans lequel sont écrits les résultats, doit renvoyer des éléments modifiables et non seulement en lecture seule. Deux prototypes sont donnés en exemple ci-dessous.
-\begin{minted}{cpp}
+\begin{listing}[H]
+\caption{Exemples de fonctions d'accès aux éléments.}
+\begin{minted}[frame=single]{cpp}
 /* Fonction d'accès pour la sortie, notez le & */
 float& fdl_out(int a,int b, 
                sycl::accessor<float, 2, sycl::access::write> acc) 
@@ -60,10 +71,13 @@ float  fdl_in(int a,int b,
               sycl::accessor<float, 2, sycl::access::read>  acc) 
               {return acc[a][b];}
 \end{minted}
+\end{listing}
 
 Les tableaux de l'entrée et de la sortie sont déclarés sous forme de buffers, exactement comme dans le cas précédent à la différence qu'ils sont bien en deux dimensions cette fois. Une fois tous les éléments déclarés, il est donc possible de former l'opération comme dans le code ci-dessous.
-\label{cd:tab_io}
-\begin{minted}{cpp}
+\begin{listing}[H]
+\label{lst:tab_io}
+\caption{Assemblage des informations d'entrées et sorties pour former une opération.}
+\begin{minted}[frame=single]{cpp}
 /* assemblage des éléments de l'entrée, dans l'ordre :
  * type, buffer des éléments en entrée, buffer des 
  * coefficients, fonction d'accès aux éléments,
@@ -78,10 +92,13 @@ output_2D<float, &ioBuffer, &fdl_out> work_out;
 /* création de l'opération */
 auto op_work = work_out << st << work_in;
 \end{minted}
+\end{listing}
 Le code pour les coefficients constants est similaire, seule la description de l'entrée est légèrement simplifiée puisqu'il n'y pas besoin de la fonction d'accès aux coefficients ni du buffer associé. 
 
 Enfin il reste à appeler le calcul, c'est l'étape la plus simple qui n'appuie que sur deux méthodes différentes, adaptées suivant les besoins d'optimisations de l'utilisateur (avec tuilage ou non). Pour lancer les calculs il est nécessaire de déclarer une queue qui contient les informations relatives au matériel disponible et est gérée par \textsf{SYCL}. La découverte du matériel est automatique, la simple déclaration de la variable permet son utilisation. Nous obtenons alors le code de lancement suivant.
-\begin{minted}{cpp}
+\begin{listing}[H]
+\caption{Lancement d'opérations de calculs.}
+\begin{minted}[frame=single]{cpp}
 {   
   /* création de la queue */
   sycl::queue myQueue; 
@@ -91,6 +108,7 @@ Enfin il reste à appeler le calcul, c'est l'étape la plus simple qui n'appuie 
   op_copy.doComputation(myQueue);
 }
 \end{minted}
+\end{listing}
 
 \section{Détails d'implantation}
 
@@ -106,37 +124,51 @@ Le DSEL est développé avec le dernier standard officiel du \textsf{C++}, \text
 \end{itemize}
 L'interface contient de nombreuses autres possibilités, pour beaucoup calquées sur \textsf{OpenCL}, mais seule une petite partie a pu être testée puis utilisée dans le DSEL, car l'implantation de \textsf{triSYCL} n'est pas terminée. Toutefois l'implantation actuelle est suffisante pour les besoins du DSEL.
 
-En ce qui concerne le DSEL lui-même, il utilise plus particulièrement la notion d'\emph{expression template} \cite{Web4,Art21} qui est une façon de décrire des expressions grâce à la méta-programmation. C'est ainsi que sont stockés les stencils : il s'agit d'une expression binaire de coefficients. Les feuilles de l'arbre sont les coefficients tandis que les nœuds sont des sous-expressions de la racine (donc des morceaux du motif du stencil). Dans le cas du code ci-dessous présentant l'agrégation de quatre coefficients, l'arbre construit est en forme de peigne (à droite ou à gauche), comme dans la figure \ref{fig:tree1_coef}.
-\begin{minted}{cpp}
+En ce qui concerne le DSEL lui-même, il utilise la notion d'\emph{expression template} \cite{Web4,Art21} qui est une façon de décrire des expressions grâce à la méta-programmation. C'est ainsi que sont stockés les stencils : il s'agit d'un arbre binaire de coefficients. Les feuilles de l'arbre sont les coefficients tandis que les nœuds sont des sous-expressions de la racine (donc des morceaux du motif du stencil). Dans le cas du code \ref{lst:st_4pts} ci-dessous présentant l'agrégation de quatre coefficients, l'arbre construit est en forme de peigne (à droite ou à gauche), comme dans la figure \ref{fig:tree1_coef}.
+\begin{listing}[H]
+\caption{Code de création d'un stencil à 4 points.}
+\label{lst:st_4pts}
+\begin{minted}[frame=single]{cpp}
 /* création d'un stencil à 4 points */
 auto st = c1+c2+c3+c4; 
 \end{minted}
+\end{listing}
 \begin{figure}[!h]
 \floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=4cm}}]{figure}[\FBwidth]
-{\caption{Exemple d'arbres en peigne d'un stencil à $4$ points formé en une seule fois.}\label{fig:tree1_coef}}
+{\caption{Exemple d'arbres en peigne d'un stencil à $4$ points formé en une seule fois, par le code \ref{lst:st_4pts}.}\label{fig:tree1_coef}}
 {\input{tikz3.tex}}
 \end{figure}
-Si le stencil est formé en deux temps, il est alors possible d'avoir un arbre équilibré comme dans l'exemple ci-dessous, avec la figure \ref{fig:tree2_coef}
-\begin{minted}{cpp}
+Si le stencil est formé en deux temps, il est alors possible d'avoir un arbre équilibré comme dans la figure \ref{fig:tree2_coef}, grâce au code \ref{lst:st_2_2pts}.
+\begin{listing}[H]
+\caption{Code de création d'un stencil par le biais de deux autres stencils.}
+\label{lst:st_2_2pts}
+\begin{minted}[frame=single]{cpp}
 /* création d'un stencil à 4 points */
 auto st1 = c1+c2;
 auto st2 = c3+c4;
 auto st = st1+st2;
 \end{minted}
+\end{listing}
 \begin{figure}[!h]
 \floatbox[{\capbeside\thisfloatsetup{capbesideposition={right,center},capbesidewidth=4cm}}]{figure}[\FBwidth]
-{\caption{Exemple d'arbre équilibré d'un stencil à $4$ points formé en plusieurs temps.}\label{fig:tree2_coef}}
+{\caption{Exemple d'arbre équilibré d'un stencil à $4$ points formé en plusieurs temps, par le code \ref{lst:st_2_2pts}.}\label{fig:tree2_coef}}
 {\input{tikz4.tex}}
 \end{figure}
 Notons que la forme de ces arbre n'a pas été étudiée pour l'obtention des performances, mais il est tout à fait possible que cette forme les influencent car elle influe sur l'ordre de calcul des opérations dans le stencil. 
 
-En supposant que certaines formes sont plus performantes que d'autres, il est primordial de pouvoir alors spécialiser le code en ayant en interne à la bibliothèque des fonctions optimisées pour certains types de motifs. Cela est rendu possible en \textsf{C++} grâce à la possibilité de redéfinir des classes et méthodes plusieurs fois avec des paramètres de template différents \cite{Web1}. En pratique il est même possible d'avoir des template à l'intérieur de template, ce qui permet un déclenchement retardé de la spécialisation d'une classe par rapport à ses méthodes. Cette méthode est notamment utilisée pour éviter à l'utilisateur de préciser le type dans les coefficients variables, celui-ci est propagé à la méthode lors de la construction des tableaux de coefficients, voir le second exemple de code dans la section \ref{cd:tab_io}. Cette méthode est relativement complexe, même pour le compilateur, d'où l'introduction d'une syntaxe peu compréhensible \cite{Web2}.
+En supposant que certaines formes sont plus performantes que d'autres, il est primordial de pouvoir alors spécialiser le code en ayant en interne à la bibliothèque des fonctions optimisées pour certains types de motifs. Cela est rendu possible en \textsf{C++} grâce à la possibilité de redéfinir des classes et méthodes plusieurs fois avec des paramètres de template différents \cite{Web1}. En pratique il est même possible d'avoir des template à l'intérieur de template, ce qui permet un déclenchement retardé de la spécialisation d'une classe par rapport à ses méthodes. Cette méthode est notamment utilisée pour éviter à l'utilisateur de préciser le type dans les coefficients variables, celui-ci est propagé à la méthode lors de la construction des tableaux de coefficients cf le second exemple de code dans la section \ref{lst:tab_io}. Cette méthode est relativement complexe, même pour le compilateur, d'où l'introduction d'une syntaxe peu compréhensible \cite{Web2}. En revanche l'utilisateur doit le préciser dans le cas des coefficients constants. Cela est redondant pour lui -- il passe l'information deux fois --, mais aussi pour le DSEL car tout le code doit alors être dupliqué, et possiblement de manière non statique ! En effet il est alors nécessaire de stocker la valeur du coefficient dans l'objet-même donc tous les autres objets (tels qu'une opération) l'utilisant doivent avoir un lien \emph{a-un} vers lui, qui est a priori dynamique. En pratique le compilateur est parfois capable de faire une telle optimisation, mais cela n'est pas garanti, et n'a pas été vérifié.
 
 
-\subsection{Calcul des paramètres de tuilage}
+\subsection{Calcul statique des paramètres de tuilage}
 \label{sec:param_tuile}
 
+Plusieurs paramètres configurent le tuilage, notamment la taille de la zone fantôme ainsi que la taille maximum d'un warp. Ces paramètres sont calculés lors de la compilation, toujours grâce à la méta-programmation. Pour la taille de la zone fantôme, le calcul est très simple, il est fait lors de la construction du stencil ou plus exactement lors de l'agrégation des coefficients (ou stencils) entre eux. En effet les objets coefficients et stencils contiennent tous les deux des indices locaux étant le maximum de décalage dans chacune des directions (quatre en deux dimensions). Le maximum est mis-à-jour à chaque agrégation, en fonction des maximums des fils dans l'arbre binaire du stencil. C'est grâce à ce maximum (un dans chaque direction) qu'est déterminée la zone fantôme qui est définie par l'\emph{offset} à partir duquel la zone de calculs commence, ainsi que la largeur totale de la zone fantôme dans chaque dimension. En deux dimension, le stencil à quatre points est donc large de $2$ éléments dans chacune des deux dimensions, tandis que l'offset est de $1$ dans chacune des deux dimensions également.
 
+L'ensemble de ce calcul est fait de manière statique, car ces paramètre sont liés au template des classes impliquées qui elles-même sont statiques -- dans le cas des coefficients variables. Ce fonctionnement a été validé par la décompression d'un fichier binaire censé affiché le résultat de ce calcul, on peut y vérifier que le résultat y apparaît directement dans le code, sans calcul le précédent. Ce résultat peut sembler paradoxal : c'est avec les coefficients variables que nous obtenons des paramètres statiques. Cela n'est pas contradictoire car ce qu'il se produit dans les cas des coefficients variables est une séparation totale entre l'objet définissant uniquement les indices de décalage, et l'objet permettant d'accéder aux coefficients. Par simplicité pour l'utilisateur, ces deux objets sont réunis en un seul dans le cas d'un coefficient fixe, mais à un certain prix : celui de l'optimisation statique. Il s'agit là d'un parfait exemple de l'équilibre à trouver entre les trois piliers de Todd Veldhuizen pour une librairie optimisée : beauté, sûreté et rapidité.
+
+Une fois la zone fantôme calculée, et ainsi le nombre d'éléments à charger que va nécessiter le calcul d'une macro-tuile, il est alors possible de déterminer la taille optimale de la macro-tuile. Cette taille est déterminer de manière récursive lors de la compilation en fonction de trois paramètres configurés dans les headers, et qui sont en pratique des variables d'environnement liées au matériel : nombre de cœurs maximum dans chaque dimension pour un warp de la carte graphique, quantité maximale de mémoire locale disponible pour un warp. Il s'agit alors d'obtenir la plus grande taille possible de macro-tuile, sans dépasser la quantité de mémoire disponible. Le principe de l'algorithme est alors très simple : en commençant par la taille minimale (celle qu'occupe la zone fantôme) l'algorithme essaie d'incrémenter le nombre d'éléments dans une dimension (ou les deux si possible) jusqu'à ce que l'une des conditions suivantes soit fausse : soit le nombre de cœurs n'est plus suffisant, soit il ne reste plus assez de mémoire. Du point de vu de l'implantation en \textsf{C++} il s'agit d'une classe template qui possède un lien \emph{a-un} avec elle-même, à la différence près que celle qu'elle possède stocke une taille de macro-tuile incrémentée de un (dans une ou deux dimensions) ainsi qu'un booléen pour signifier l'arrêt ou non de la récursion. Suivant cette méthode, la macro-tuile ne s'adapte pas à la forme du stencil, mais cela est toujours possible grâce à la spécialisation partielle évoquée dans la sous-section précédente.
+
+De même que pour la zone fantôme, le tuilage est effectué de manière statique et le résultat du calcul est bien présent directement dans le binaire exécutable du programme. Les calculs statiques ne concernent d'ailleurs pas que des paramètres, mais aussi la sémantique du DSEL. En effet la présence de \textsf{static\_assert} dans le code permet d'éviter à l'utilisateur d'écrire du code fallacieux, en déclenchant une erreur lors de la compilation. Ainsi pour le tuilage, si le stencil est trop large pour la taille d'une tuile, une erreur va se déclencher. De même l'agrégation de coefficients variables avec des coefficients fixes va déclencher une erreur lors de la compilation. Cela est très utile pour le développeur car il est beaucoup plus simple de corriger un problème lorsqu'il est détecté à la compilation que lorsqu'il est détecté à l'exécution, c'est de plus un gain de temps dans le développement. 
 
 \section{\'Evolutions possibles}
 \label{sec:evol_biblio}
